# lambda-kit

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pylintrc  .releaserc  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  release.config.js  setup.cfg  setup.cfg.old  setup.py  setup.sh  tasks.py  tox.ini  update-version.js
.github/workflows/: ci.yml  release.yml
data/lambda1/: handler.py
docs/: semantic-release.md
lambda_kit/: __main__.py  utils.py
lambda_kit/models/: aws_lambda.py  function.py
lambda_kit/mvc/controllers/: __init__.py  function_controller.py  layer_controller.py
lambda_kit/mvc/models/: function_model.py  layer_model.py
lambda_kit/mvc/views/: base_view.py  function_view.py  layer_view.py
lambda_kit/utils/: aws_lambda.py  directory.py  file.py
lambda_packager/: cli.py
layer_packager/: cli.py
templates/: lambda_function_template.jinja2
tests/: test_cli.py  test_main.py  test_utils.py
tests/mvc/views/: helpers.py  test_function_view.py  test_layer_view.py
tests/utils/: test_aws_lambda.py  test_directory.py  test_file.py
